http://bugzilla.zimbra.com/show_bug.cgi?id=14969 bug: 14969 - <button> tag no workie on IE 6 and earlier. switch to <input type="image"> and if button has label, add <input type="submit" ...> next to it.
Copied from Perforce
 Change: 45637

--- a/WebRoot/js/zimbraMail/config/style/zhtml.css
+++ b/WebRoot/js/zimbraMail/config/style/zhtml.css
@@ -217,10 +217,12 @@ padding-right:4px;
 padding: 5px;
 }
 
-.TbTop BUTTON, .TbBottom BUTTON {
+.TbTop INPUT, .TbBottom INPUT {
  padding: 0; 
  border: none;
 /*@_WidgetContainer_@; */
+    @FontSize-normal@
+    @Text@
  @ToolbarBg@;   
 }
 
